Bug #28535 mistake in mysqldump error message
Submitted: 19 May 2007 11:17 Modified: 24 Oct 2007 19:22
Reporter: Shane Bester (Platinum Quality Contributor) Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server: mysqldump Command-line Client Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Iggy Galarza CPU Architecture:Any

[19 May 2007 11:17] Shane Bester
Description:
in function dump_events_for_db() in mysqldump.c there is the following code:

delimit_test= create_delimiter(row[3], delimiter, sizeof(delimiter)); 
if (delimit_test == NULL) {
   fprintf(stderr, "%s: Warning: Can't dump event '%s'\n", 
   event_name, my_progname);
   DBUG_RETURN(1);
}

How to repeat:
inspect the code

Suggested fix:
the fprintf parameters should be the other way around:

fprintf(stderr, "%s: Warning: Can't dump event '%s'\n", 
   my_progname,event_name);
[19 Sep 2007 18:46] Shane Bester
still Patch pending?
[8 Oct 2007 21:43] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/35145

ChangeSet@1.2569, 2007-10-08 17:43:32-04:00, iggy@alf.(none) +1 -0
  Bug#28535 mistake in mysqldump error message
  - Fixed error message.
[18 Oct 2007 21:34] Bugs System
Pushed into 5.1.23-beta
[24 Oct 2007 19:22] Paul DuBois
Noted in 5.1.23 changelogs.

mysqldump reversed the event name and program name in one of its 
error messages.