Bug#28535 mistake in mysqldump error message - Fixed error message.